Fix hr spacing on dropdown menu

--- a/assets/css/com/dropdown-menu.less
+++ b/assets/css/com/dropdown-menu.less
@@ -38,4 +38,12 @@
     background: @color-border--light-gray;
     margin: 0;
   }
+
+  hr + .dropdown-item {
+    margin-top: -1rem;
+  }
+
+  .dropdown-item + hr {
+    margin-top: -1rem;
+  }
 }
